# Finacial-managerment

./: .gitignore  PLAN.md  README.md  RULES.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hoang/moneytrack/: MainActivity.kt  MoneyTrackApp.kt
app/src/main/java/com/hoang/moneytrack/data/: FinanceRepository.kt
app/src/main/java/com/hoang/moneytrack/data/db/: AppDatabase.kt  Entities.kt  FinanceDao.kt
app/src/main/java/com/hoang/moneytrack/data/prefs/: SettingsStore.kt
app/src/main/java/com/hoang/moneytrack/data/security/: DbKeyManager.kt
app/src/main/java/com/hoang/moneytrack/data/sync/: SyncManager.kt
app/src/main/java/com/hoang/moneytrack/ui/budget/: BudgetScreen.kt
app/src/main/java/com/hoang/moneytrack/ui/common/: AddForms.kt  Charts.kt  Components.kt  Money.kt
app/src/main/java/com/hoang/moneytrack/ui/home/: HomeScreen.kt
app/src/main/java/com/hoang/moneytrack/ui/investment/: InvestmentScreen.kt
app/src/main/java/com/hoang/moneytrack/ui/lock/: LockScreen.kt
app/src/main/java/com/hoang/moneytrack/work/: DailyWorker.kt
app/src/main/res/drawable/: ic_launcher_fg.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-vi/: strings.xml
app/src/test/java/com/hoang/moneytrack/: MoneyAndRecurrenceTest.kt
gradle/: libs.versions.toml
server/: .env.example  Dockerfile  pyproject.toml
server/app/: auth.py  config.py  db.py  main.py  models.py  sync.py
server/tests/: test_api.py
(+8 files in other folders)
